Updates gradle build dependencies and other deprecation issues.