@@ -1,18 +1,22 @@
-/*******************************************************************************
- * sdr-trunk
- * Copyright (C) 2014-2018 Dennis Sheirer
+/*
+ * ******************************************************************************
+ * sdrtrunk
+ * Copyright (C) 2014-2019 Dennis Sheirer
  *
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
- * License as published by  the Free Software Foundation, either version 3 of the License, or  (at your option) any
- * later version.
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
  *
- * This program is distributed in the hope that it will be useful,  but WITHOUT ANY WARRANTY; without even the implied
- * warranty of  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License  along with this program.
- * If not, see <http://www.gnu.org/licenses/>
- *
- ******************************************************************************/
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>
+ * *****************************************************************************
+ */
 package io.github.dsheirer.module.decode.p25.audio;
 
 import io.github.dsheirer.audio.AbstractAudioModule;
@@ -32,6 +36,8 @@ import jmbe.iface.AudioConversionLibrary;
 import jmbe.iface.AudioConverter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.lang.reflect.InvocationTargetException;
 
 public class P25AudioModule extends AbstractAudioModule implements Listener<IMessage>, IMessageListener
 {
@@ -186,13 +192,19 @@ public class P25AudioModule extends AbstractAudioModule implements Listener<IMes
 
         try
         {
-            @SuppressWarnings("rawtypes")
             Class temp = Class.forName("jmbe.JMBEAudioLibrary");
 
-            library = (AudioConversionLibrary) temp.newInstance();
+            try
+            {
+                library = (AudioConversionLibrary) temp.getDeclaredConstructor().newInstance();
+            }
+            catch(InvocationTargetException | NoSuchMethodException e)
+            {
+                mLog.error("Couldn't reflectively create instance of JMBE library");
+            }
 
-            if((library.getMajorVersion() == 0 && library.getMinorVersion() >= 3 &&
-                    library.getBuildVersion() >= 3) || library.getMajorVersion() >= 1)
+            if(library != null && ((library.getMajorVersion() == 0 && library.getMinorVersion() >= 3 &&
+                    library.getBuildVersion() >= 3) || library.getMajorVersion() >= 1))
             {
                 mAudioConverter = library.getAudioConverter(IMBE_CODEC, AudioFormats.PCM_SIGNED_8KHZ_16BITS_MONO);
 
